legacy: Fixed module names in scripts
Bug 17916

--- a/board/laird/rootfs-additions-common/etc/network/wifi-nat.conf
+++ b/board/laird/rootfs-additions-common/etc/network/wifi-nat.conf
@@ -10,19 +10,19 @@ dev=$IFRC_DEVICE
 test -n "$dev" || exit 1
 
 case $act in
-  
+
   u*) ## up - setup network policy
     ### pre-cfg-do ###
     echo "  ${0##*/}: configuring $dev for masquerade/nat on wlan0"
-    
+
     # using an ifrc call here takes care of all details, as set in /e/n/i
     # the interface will be automatically started if not already
     ifrc wlan0 up
-    
+
     # enable ip forwarding
-    modprobe nf_conntrack_ipv4
+    modprobe nf_conntrack
     echo 1 > /proc/sys/net/ipv4/ip_forward
-    
+
     # flush the ip tables
     iptables --flush
     iptables --table nat --flush
@@ -39,18 +39,18 @@ case $act in
     iptables -A FORWARD -i $dev -o wlan0 -j ACCEPT
     iptables -A FORWARD -i wlan0 -o $dev -m state --state RELATED,ESTABLISHED -j ACCEPT
     ;;
-    
+
   d*) ## down - cleanup things we configured earlier
     ### post-dcfg-do ###
     echo "  ${0##*/}: deconfiguring $dev"
-    
+
     # flushing all rules (really we should just delete what we created)
     iptables -t nat -F
-   
+
     # disable ip forwarding
     echo 0 > /proc/sys/net/ipv4/ip_forward
-    modprobe --remove-dependencies nf_conntrack_ipv4
+    modprobe -r nf_conntrack
     ;;
-esac 
+esac
 
 exit 0
