--- a/board/laird/rootfs-additions-common/etc/network/bridge_mode.conf
+++ b/board/laird/rootfs-additions-common/etc/network/bridge_mode.conf
@@ -17,8 +17,7 @@ case $act in
   u*) ## up - setup policy
     echo \ \ $self: configuring $dev rules
 
-    modprobe nf_conntrack_ipv4
-    modprobe xt_tcpudp
+    modprobe nf_conntrack
     echo 1 > /proc/sys/net/ipv4/ip_forward
 
     # set forwarding
@@ -34,10 +33,8 @@ case $act in
     iptables -D FORWARD -i $port2 -o $port1 -j ACCEPT 2>/dev/null
 
     echo 0 > /proc/sys/net/ipv4/ip_forward
-    modprobe --remove-dependencies nf_conntrack_ipv4
-    modprobe --remove-dependencies xt_tcpudp
+    modprobe -r nf_conntrack
     ;;
 esac
 
 exit 0
-
