--- a/board/laird/rootfs-additions-common/etc/network/usb-wifi-tethering.conf
+++ b/board/laird/rootfs-additions-common/etc/network/usb-wifi-tethering.conf
@@ -9,48 +9,48 @@ dev=$IFRC_DEVICE
 test -n "$dev" || exit 1
 
 case $act in
-  
+
   u*) ## up - setup network policy
     ### post-cfg-do stuff ###
     echo "  ${0##*/}: configuring $dev masquerade out wlan0"
-    
+
     # need the wireless iface in basic state
     # using an ifrc call here takes care of a lot of different what-if's
     ifrc wlan0 up manual || exit 1
-    
+
     # the $dev address and method is set in /e/n/i, and managed by ifrc
     # or can be overwritten here...
     #
-    
+
     # enable ip forwarding
-    modprobe nf_conntrack_ipv4
+    modprobe nf_conntrack
     echo 1 > /proc/sys/net/ipv4/ip_forward
-    
+
     # flush the ip tables
     iptables --flush
     iptables --table nat --flush
     iptables --delete-chain
     iptables --table nat --delete-chain
-    
-    # set up forwarding and masquerading 
+
+    # set up forwarding and masquerading
     iptables --append FORWARD --in-interface $dev -j ACCEPT
-   
+
     # force packets out a specific interface
     iptables -t nat --append POSTROUTING --out-interface wlan0 -j MASQUERADE
     ;;
-    
+
   d*) ## down - cleanup things we configured earlier
     ### pre-dcfg-do stuff ###
     echo "  ${0##*/}: deconfiguring $dev"
-    ifconfig $dev 0.0.0.0 
-    
+    ifconfig $dev 0.0.0.0
+
     # flushing all rules (really we should just delete what we created)
     iptables -t nat -F
-   
+
     # disable ip forwarding
     echo 0 > /proc/sys/net/ipv4/ip_forward
-    modprobe --remove-dependencies nf_conntrack_ipv4
+    modprobe -r nf_conntrack
     ;;
-esac 
+esac
 
 exit 0
