--- a/board/laird/rootfs-additions-common/etc/network/wifi-nat6.conf
+++ b/board/laird/rootfs-additions-common/etc/network/wifi-nat6.conf
@@ -16,7 +16,7 @@ case $act in
     echo "  ${0##*/}: configuring $dev for masquerade/nat on wlan0"
 
     # enable ip forwarding
-    modprobe nf_conntrack_ipv6
+    modprobe nf_conntrack
     echo 1 > /proc/sys/net/ipv6/conf/all/forwarding
 
     # disable forwarding on wlan0
@@ -50,7 +50,7 @@ case $act in
     # disable ip forwarding
     echo 0 > /proc/sys/net/ipv6/conf/all/forwarding
     echo 1 > /proc/sys/net/ipv6/conf/wlan0/accept_ra
-    modprobe --remove-dependencies nf_conntrack_ipv6
+    modprobe -r nf_conntrack
     ;;
 esac
 
