--- a/configs/som60_lwb_mfg_defconfig
+++ b/configs/som60_lwb_mfg_defconfig
@@ -103,5 +103,6 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_ADAPTER=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_MFG=y
 BR2_PACKAGE_WL_FMAC=y
