--- a/configs/som60x2sd_mfg_defconfig
+++ b/configs/som60x2sd_mfg_defconfig
@@ -45,6 +45,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
