--- a/configs/wb45n_legacy_fips_defconfig
+++ b/configs/wb45n_legacy_fips_defconfig
@@ -38,6 +38,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
+BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
