--- a/configs/wb50nsd_sysd_fips_defconfig
+++ b/configs/wb50nsd_sysd_fips_defconfig
@@ -57,6 +57,7 @@ BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
