--- a/configs/wb45n_legacy_fips_dev_defconfig
+++ b/configs/wb45n_legacy_fips_dev_defconfig
@@ -25,13 +25,15 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb45n"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox_legacy.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_LSOF=y
 BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_MTD_DEBUG is not set
 # BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
+BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
@@ -42,6 +44,7 @@ BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
+BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
@@ -71,3 +74,7 @@ BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS=y
+BR2_PACKAGE_KCAPI_MODULE=y
+BR2_PACKAGE_PARSER_ACVP=y
+BR2_PACKAGE_OPENSSL_TESTING=y
