--- a/configs/wb50nsd_sysd_fips_dev_defconfig
+++ b/configs/wb50nsd_sysd_fips_dev_defconfig
@@ -6,7 +6,7 @@ BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_OPTIMIZE_3=y
-BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/som60/som60_fips-local.mk"
+BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb50n_sysd/wb50n_sysd-local.mk"
 BR2_REPRODUCIBLE=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
@@ -16,63 +16,54 @@ BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/som60/post_build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="som60sd board/laird/configs-common/keys"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n_sysd/post_build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n_sysd/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb50nsd board/laird/configs-common/keys"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_DEFCONFIG="som60_fips"
+BR2_LINUX_KERNEL_DEFCONFIG="wb50n_sysd_fips"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_som60"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n_sysd"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
-BR2_PACKAGE_ALSA_UTILS=y
-BR2_PACKAGE_ALSA_UTILS_APLAY=y
-BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
-BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+BR2_PACKAGE_GDB_DEBUGGER=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
-BR2_PACKAGE_MEMTESTER=y
-BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_SREDIRD=y
-BR2_PACKAGE_STATSERIAL=y
-BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
+BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LIBOPENSSL_1_0_2=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
-BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
-BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 BR2_PACKAGE_BRIDGE_UTILS=y
-BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
-BR2_PACKAGE_DNSMASQ_DNSSEC=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_ETHTOOL=y
-BR2_PACKAGE_FIREWALLD=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
-BR2_PACKAGE_IPSEC_TOOLS=y
-# BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
+BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_PPPD=y
-BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
+BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/configs-common/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
 # BR2_PACKAGE_SYSTEMD_PSTORE is not set
@@ -90,7 +81,7 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="som60sd"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50nsd_sysd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
@@ -103,10 +94,12 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
-BR2_LRD_SOM60_RADIO=y
+BR2_LRD_WB50N_SYSD_RADIO=y
 BR2_LRD_FIPS_RADIO=y
-BR2_PACKAGE_MC_MINT=y
-BR2_PACKAGE_WEBLCM_PYTHON=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS=y
+BR2_PACKAGE_KCAPI_MODULE=y
+BR2_PACKAGE_PARSER_ACVP=y
+BR2_PACKAGE_OPENSSL_TESTING=y
