--- a/configs/wb45n_legacy_fips_dev_defconfig
+++ b/configs/wb45n_legacy_fips_dev_defconfig
@@ -74,6 +74,7 @@ BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_OPENSSL_FIPS=y
 BR2_PACKAGE_LAIRD_OPENSSL_FIPS=y
 BR2_PACKAGE_KCAPI_MODULE=y
 BR2_PACKAGE_PARSER_ACVP=y
