--- a/configs/som60sd_fips_dev_defconfig
+++ b/configs/som60sd_fips_dev_defconfig
@@ -67,6 +67,7 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
+BR2_PACKAGE_BASH=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/configs-common/swupdate.config"
