--- a/configs/wb45n_legacy_fips_dev_defconfig
+++ b/configs/wb45n_legacy_fips_dev_defconfig
@@ -51,6 +51,7 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
+BR2_PACKAGE_BASH=y
 BR2_PACKAGE_WGET=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBI=y
