--- a/configs/wb45n_legacy_fips_dev_defconfig
+++ b/configs/wb45n_legacy_fips_dev_defconfig
@@ -12,6 +12,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
+BR2_SYSTEM_BIN_SH_BASH=y
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb45n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb45n/post_image.sh"
@@ -51,7 +52,6 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_BASH=y
 BR2_PACKAGE_WGET=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBI=y
