--- a/configs/wb50nsd_sysd_fips_dev_defconfig
+++ b/configs/wb50nsd_sysd_fips_dev_defconfig
@@ -101,3 +101,4 @@ BR2_PACKAGE_LAIRD_OPENSSL_FIPS=y
 BR2_PACKAGE_KCAPI_MODULE=y
 BR2_PACKAGE_PARSER_ACVP=y
 BR2_PACKAGE_OPENSSL_TESTING=y
+BR2_PACKAGE_JITTERRNG_SCRIPTS=y
