--- a/package/lrd-closed-source/Config.in
+++ b/package/lrd-closed-source/Config.in
@@ -19,3 +19,4 @@ source "package/lrd-closed-source/parser-cavs/Config.in"
 source "package/lrd-closed-source/parser-acvp/Config.in"
 source "package/lrd-closed-source/openssl-testing/Config.in"
 source "package/lrd-closed-source/lru_cypress/Config.in"
+source "package/lrd-closed-source/jitterrng-scripts/Config.in"
