buildroot: Automatically remove scripts with components not present
- Remove usbhost script when no USB host drivers present
- Remove lighttpd scripts when not present
- Disable tftpd by default as nobody using it

Bug 16184

--- a/board/laird/rootfs-additions-common/etc/inetd.conf
+++ b/board/laird/rootfs-additions-common/etc/inetd.conf
@@ -18,7 +18,7 @@
 # service  type  protocol  flag    user    path_to_server_and_args 0 1 2 ..
 
 ssh      stream  tcp       nowait  root    /usr/sbin/sshd  sshd -i
-tftp      dgram  udp         wait  root    /usr/sbin/tftpd  tftpd -l -c /root
+#tftp      dgram  udp         wait  root    /usr/sbin/tftpd  tftpd -l -c /root
 ftp      stream  tcp       nowait  root    /usr/sbin/proftpd  proftpd -d1
 
 # using a service wrapper for the webserver
